--- a/FinanceiroWeb/WebContent/publico/usuario.xhtml
+++ b/FinanceiroWeb/WebContent/publico/usuario.xhtml
@@ -10,13 +10,14 @@
 </h:head>
 <h:body>
 	<h1>Cadastro de Usuários</h1>
-
+		
 
 	<h:form id="cadastro">
 		<h:messages />
 
 		<h:inputHidden value="#{usuarioBean.usuario.codigo}" />
 		<h:inputHidden value="#{usuarioBean.usuario.ativo}" />
+		<h:inputHidden value="#{usuarioBean.destinoSalvar}"/>
 
 		<h:panelGrid columns="2">
 			<h:outputLabel value="Nome:" for="nome" />
