--- a/trunk/FinanceiroWeb/WebContent/index.html
+++ b/trunk/FinanceiroWeb/WebContent/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="Refresh" CONTENT="0;URL=restrito/pricipal.jsf">
+<META HTTP-EQUIV="Refresh" CONTENT="0;URL=restrito/principal.jsf">
