--- a/trunk/FinanceiroWeb/WebContent/publico/login.xhtml
+++ b/trunk/FinanceiroWeb/WebContent/publico/login.xhtml
@@ -15,7 +15,7 @@
 	</h:form>
 
 	<h:panelGroup rendered="#{!empty param.login_error}">
-		<span style="font =color: red"> Erro ao efetuar o login.</span>
+		<span style="font-color: red"> Erro ao efetuar o login.</span>
 		<br />
 		<br />
 		Motivo: #{SPRING_SECURITY_LAST_EXCEPTION.message}
