--- a/trunk/FinanceiroWeb/WebContent/restrito/principal.xhtml
+++ b/trunk/FinanceiroWeb/WebContent/restrito/principal.xhtml
@@ -6,24 +6,30 @@
 	xmlns:sec="http://www.springframework.org/security/facelets/tags">
 
 <h:head>
-<title>Principal</title>
+	<title>Principal</title>
 </h:head>
 <h:body>
 	<h1>Gerenciador Financeiro Pessoal</h1>
-Usuário logado #{request.remoteUser}
+ Usuário logado #{request.remoteUser}
+<br />
+ Nome do Usuário Logado #{contextoBean.usuarioLogado.nome}
 <br />
 	<h:form>
-		<sec:ifAnyGranted roles="ROLE_ADMINISTADOR">
-			<h:commandLink action="/admin/principal" title="Administrativo">
-				<h:graphicImage library="imagens" name="administrativo16.png" />
-			</h:commandLink>
+		<h:commandButton value="Conta" action="conta" />
+
+		<h:selectOneMenu value="#{contextoBean.contaAtiva.conta}"
+			valueChangeListener="#{contextoBean.setContaAtiva}"
+			rendered="#{!empty contextoBean}" onchange="submit()">
+			<f:selectItems value="#{contaBean.lista}" var="conta"
+				itemValue="#{conta.conta}" itemLabel="#{conta.descricao}" />
+		</h:selectOneMenu>
+
+		<sec:ifAnyGranted roles="ROLE_ADMINISTRADOR">
+			<h:commandButton value="Administração" action="/admin/principal" />
 		</sec:ifAnyGranted>
 
-		<a
-			onclick="document.location='#{request.contextPath}/j_spring_security_logout'"
-			title="Sair"> <h:graphicImage library="imagens"
-				name="logout16.png" />
-		</a>
+		<input type="button" value="Logout"
+			onclick="document.location='#{request.contextPath}/j_spring_security_logout'" />
 	</h:form>
 </h:body>
 </html>
