--- a/FinanceiroWeb/WebContent/publico/usuario.xhtml
+++ b/FinanceiroWeb/WebContent/publico/usuario.xhtml
@@ -10,14 +10,14 @@
 </h:head>
 <h:body>
 	<h1>Cadastro de Usuários</h1>
-		
+
 
 	<h:form id="cadastro">
 		<h:messages />
 
 		<h:inputHidden value="#{usuarioBean.usuario.codigo}" />
 		<h:inputHidden value="#{usuarioBean.usuario.ativo}" />
-		<h:inputHidden value="#{usuarioBean.destinoSalvar}"/>
+		<h:inputHidden value="#{usuarioBean.destinoSalvar}" />
 
 		<h:panelGrid columns="2">
 			<h:outputLabel value="Nome:" for="nome" />
@@ -74,10 +74,24 @@
 				value="#{usuarioBean.confirmarSenha}" size="10" maxlength="10"
 				required="true" redisplay="true" />
 		</h:panelGrid>
-		
+
+		<h:panelGroup rendered="#{empty contextoBean.usuarioLogado}">
+			<fieldset>
+				<legend>Conta Inicial</legend>
+				<h:panelGrid columns="2">
+					<h:outputLabel value="Descição:" for="descricao" />
+					<h:inputText id="descricao" label="Descrição"
+						value="#{usuarioBean.conta.descricao}" required="true"
+						maxlength="45" />
+						
+					<h:outputLabel value="Saldo Inicial:" for="saldoInicial" />
+					<h:inputText id="saldoInicial" value="#{usuarioBean.conta.saldoInicial}" size="10">
+					<f:convertNumber minFractionDigits="2"/>
+					</h:inputText>	
+				</h:panelGrid>
+			</fieldset>
+		</h:panelGroup>
 		<h:commandButton action="#{usuarioBean.salvar}" value="Salvar" />
-		
-		
 	</h:form>
 	<hr />
 </h:body>
