--- a/FinanceiroWeb/WebContent/publico/login.xhtml
+++ b/FinanceiroWeb/WebContent/publico/login.xhtml
@@ -1,26 +1,21 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 
 <html xmlns="http://www.w3.org/1999/xhtml"
+		xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
-<h:head>
-	<title>Login</title>
-</h:head>
-
-<h:body>
-	<h1>Login</h1>
-	<hr />
-	<h:form>
-		<h:commandButton action="#{usuarioBean.novo}" value="Registre-se" />
-	</h:form>
-
-	<h:panelGroup rendered="#{!empty param.login_error}">
-		<span style="font-color: red"> Erro ao efetuar o login.</span>
-		<br />
-		<br />
-		Motivo: #{SPRING_SECURITY_LAST_EXCEPTION.message}
-	</h:panelGroup>
-	<form id="login" method="post"
+	<ui:composition template="/templates/principal.xhtml">
+		<ui:define name="corpo">
+			<h:form>
+				<h:commandButton action="#{usuarioBean.novo}" value="Registre-se"/>
+			</h:form>
+			<h:panelGroup rendered="#{!empty param.login_error}">
+				<span style="font-color:red">Erro ao efetuar o login</span><br/>
+				<br/>
+				Motivo: #{SPRING_SECURITY_LAST_EXCEPTION.message}
+			</h:panelGroup>
+			
+			<form id="login" method="post"
 		action="#{request.contextPath}/j_spring_security_check">
 		<table>
 			<tr>
@@ -45,6 +40,6 @@
 			document.getElementById("login").j_username.value = "#{SPRING_SECURITY_LAST_USERNAME}";
 		</script>
 	</form>
-	<hr />
-</h:body>
+		</ui:define>
+	</ui:composition>
 </html>
